# test_ground

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitignore copy  .yamllint  BEDROCK_SETUP.md  Dockerfile  README.md  bedrock-policy.json  deploy_app_with_ngrok.sh  docker-compose.yml  format.sh  launch_app.sh  pyproject.toml  rxconfig.py
KnowledgeGraphDB/Neo4j_KG_creation/: API_for_graph.py  cypher_runner.py  graph_streamer.py  knowledge_graph_builder.py
KnowledgeGraphDB/tests/: retrieval_queries_for_HybridCypherRetriever.yaml  sample_queries_cypher_agent.yaml  test_CypherQueringAgent.py  test_HybridCypherRetriever.py  test_Streamer.py  test_cypher_queries.py
assets/css/: styles.css
assets/svg/: chat_background_watermark.html  temp_markdown_report.html
dev/: __init__.py
dev/aws_bedrock/: claude_boto3_client.py  claude_langchain.py
dev/langgraph_basics/: chains_for_hybrid_search_and_metadata_filtering.py  simple_ReAct.py  simple_hybrid_search_w_metadata_filtering.py  workflow_for_parallel_hybrid_search_w_meta_filtering.py
dev/langgraph_basics/Neo4jGraphRAG/: agent_for_cypher_quering.py  agent_for_semantic_graphRAG.py  hybrid_cypher_retrieving.py  knowledge_graph_builder.py  llm_chains_cypher.py  sample_generated_answers.yaml  sample_queries.yaml
dev/tools/: injecting_arguments_at_runtime.py  injecting_arguments_at_runtime_in_graph.py
pathway_front/: __init__.py  pathway_front.py  state.py  style.py
src/: __init__.py  config.py  db_conns.py  db_conns_with_tunnel.py  utils.py
src/API/: __init__.py  streaming_api.py
src/agents/: __init__.py
src/agents/ReAct_agent/: README.md  __init__.py  agent_logic.py  graph_builder.py  schemas.py  system_prompts.yaml  test_list_comunas_fix.py  test_react.py  test_reasoning_integration.py  test_region_extraction.py
src/agents/ReAct_plus_planner_agent/: README.md  __init__.py  agent_logic.py  graph_builder.py  schemas.py  test_no_hallucinations.py  tools_registry.py
src/agents/cypher_query_agent/: agent_logic.py  fewshots.yaml  graph_builder.py  llm_chains.py  reducers.py  schemas.py  system_prompts.yaml  test_fewshot_cypher_queries.py  test_reducers.py
src/agents/hybrid_graphRAG_agent/: agent_logic.py  bedrock_converse_adapter.py  graph_builder.py  knowledge_graph_search.py  retriever.py
src/agents/planner_agent/: fewshots.yaml  llm_chains.py  schemas.py  system_prompts.yaml
src/agents/reasoning_agent/: README.md  __init__.py  agent_logic.py  graph_builder.py  llm_chains.py  schemas.py  system_prompts.yaml
src/agents/user_question_augmentation_agent/: fewshots.yaml  llm_chains.py  schemas.py  system_prompts.yaml
src/chains/: llm_chain_builder.py
src/cli/: run_query.py  run_query_with_tunnel.py
src/documents/: __init__.py  count_pdf_pages.py  markdown_chunking_step01.py  markdown_chunking_step02.py  metadata.py  parse_into_markdown.py
src/fewshots/: fewshooter_builder.py  fewshots_format.yaml
src/graph_streamers/: async_stream_updates.py
src/tests/: test_tools.py
src/tools/: __init__.py  list_comunas.py  list_comunas_en_regiones.py  list_proyectos_por_comuna_por_region.py  list_regiones.py
